# brick-review

./: .gitignore  package.json
app/: REFACTORING-SUMMARY.md  REVIEW-README.md  globals.css  next.config.js  tailwind.config.cjs  tsconfig.json
app/admin/: layout.tsx  page.tsx
app/admin/buy/: layout.tsx  page.tsx
app/admin/calculator/: page.tsx
app/admin/database/: page.tsx
app/admin/inventory/: layout.tsx  page.tsx
app/admin/orders/: page.tsx
app/admin/system/: page.tsx
app/admin/test/: page.tsx
app/admin/user-control/: page.tsx
app/api/buy_requests/: route.ts
app/api/buy_requests_secure/: route.ts
app/api/buyback-submission/: route.ts
app/api/collection-rename/: route.ts
app/api/firestore-export/: route.ts
app/api/generate-reception-number/: route.ts
app/api/id-verification-log/: route.ts
app/api/normalized-data/: route.ts
app/client/: README.md  layout.tsx  page.tsx
app/components/: AuthGuard.tsx  CrmShell.tsx  InventorySearchBar.tsx
app/lib/: bankDataLoader.ts  firebase-admin.ts  firestoreClient.ts  idVerificationStorage.ts
app/login/: page.tsx
app/userclient/: page.tsx
app/wasm-image-validator/: Cargo.toml
components/: BirthdateSelect.tsx  BookingSlotSelector.tsx  ResponsiveDatePicker.tsx  SignatureCanvas.tsx
components/ui/: badge.tsx  input.tsx  select.tsx
lib/: appCheck.ts  arrangementCalculators.tsx  consentDefaults.ts  firebaseClient.ts  localStorage.ts  resultHelpers.ts  resultStyles.ts  siteAuth.ts  taxonomyResolver.ts  weightCalculations.ts
lib/search/: index.ts  types.ts
wasm-image-validator/src/: lib.rs
(+130 files in other folders)
